<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CookingScreen1">

    <ImageView
        android:id="@+id/mainScreenBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_mainscreen" />

    <!--Instructions Button-->
    <ImageButton
        android:id="@+id/instructionsButton"
        android:layout_width="43dp"
        android:layout_height="46dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:contentDescription="@string/instructions_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/button_instructions" />

    <!--Cook Button-->
    <ImageButton
        android:id="@+id/cookButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/cook_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295"
        app:srcCompat="@drawable/button_cook" />

    <!--Clear Button-->
    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="74dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:background="@null"
        android:contentDescription="@string/clear_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toEndOf="@+id/cookButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        app:srcCompat="@drawable/button_clear" />

    <!--Hint Button-->
    <ImageButton
        android:id="@+id/hintButton"
        android:layout_width="56dp"
        android:layout_height="54dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:contentDescription="@string/hint_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413"
        app:srcCompat="@drawable/button_hint" />


    <!--Ingredients Buttons Scroll Display-->
    <ScrollView
        android:id="@+id/IngredientsScroll"
        android:layout_width="363dp"
        android:layout_height="345dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainScreenBG"
        app:layout_constraintVertical_bias="1.0">

        <GridLayout
            android:id="@+id/ingredientsGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:columnOrderPreserved="false"
            android:padding="16dp"
            android:rowCount="5">

            <!--ROW 1-->
            <!--Rice Button-->
            <ImageButton
                android:id="@+id/riceButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="0"
                android:layout_column="0"
                android:background="@null"
                android:contentDescription="@string/rice_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_1rice" />

            <!--Nori Seaweed Button-->
            <ImageButton
                android:id="@+id/seaweedButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:contentDescription="@string/seaweed_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_2seaweed" />

            <!--Soy Sauce Button-->
            <ImageButton
                android:id="@+id/sauceButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="0"
                android:layout_column="2"
                android:background="@null"
                android:contentDescription="@string/sauce_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_3soysauce" />

            <!--ROW 2-->
            <!--Egg Button-->
            <ImageButton
                android:id="@+id/eggButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/egg_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_4egg" />

            <!--Mayonnaise Button-->
            <ImageButton
                android:id="@+id/mayoButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/mayo_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_5mayonnaise" />

            <!--Ume Plums Button-->
            <ImageButton
                android:id="@+id/umeplumsButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/ume_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_6umeplums" />

            <!--ROW 3-->
            <!--Shiso Leaves Button-->
            <ImageButton
                android:id="@+id/shisoButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/shiso_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_7shiso" />

            <!--Canned Tuna Button-->
            <ImageButton
                android:id="@+id/tunaButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/tuna_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_8tuna" />

            <!--Ketchup Button-->
            <ImageButton
                android:id="@+id/ketchupButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/ketchup_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_9ketchup" />

            <!--ROW 4-->
            <!--Cod Roe Button-->
            <ImageButton
                android:id="@+id/codroeButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/roe_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_10roe" />

            <!--Tempura Button-->
            <ImageButton
                android:id="@+id/tempuraButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/tempura_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_11tempura" />

            <!--Salmon Button-->
            <ImageButton
                android:id="@+id/salmonButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/salmon_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_12salmon" />

            <!--ROW 5-->
            <!--Bonito Flakes Button-->
            <ImageButton
                android:id="@+id/bonitoButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/bonito_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_13bonito" />

            <!--Corn Button-->
            <ImageButton
                android:id="@+id/cornButton"
                android:layout_width="101dp"
                android:layout_height="93dp"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:contentDescription="@string/corn_button"
                android:scaleType="fitCenter"
                android:onClick="onIngButtonClick"
                app:srcCompat="@drawable/ing_14corn" />
        </GridLayout>
    </ScrollView>

    <!--Default Display Images-->
    <!--Default 1-->
    <ImageView
        android:id="@+id/default1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="@+id/mainScreenBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/default_image" />

    <!--Default 2-->
    <ImageView
        android:id="@+id/default2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="@+id/mainScreenBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/default_image" />

    <!--Default 3-->
    <ImageView
        android:id="@+id/default3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="@+id/mainScreenBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/default_image" />

</androidx.constraintlayout.widget.ConstraintLayout>